PSP/borradores/ae/jwt/REST-AdrianSaavedra/src/main/java/org/example/restadriansaavedra/common/errors/UserAlreadyExistsException.java
package org.example.restadriansaavedra.common.errors;

public class UserAlreadyExistsException extends RuntimeException{

    public UserAlreadyExistsException(String message) {
        super(message);
    }
}
